--- a/templates/cvForm/cv.html.twig
+++ b/templates/cvForm/cv.html.twig
@@ -29,7 +29,7 @@
 
                             <div class="col-sm-10">
                                 <div style="width: 120px; float: left; height: 160px; border: dashed thin grey;">
-                                    <img src="https://cv.casabonsucesso.com.br/images/fotos3x4/{{ cv.foto }}"
+                                    <img src="{{ getEnv('DIR_FOTOS3x4') }}{{ cv.foto }}"
                                          style="width: 100%"/>
                                 </div>
                                 <div>
