--- a/templates/cvForm/cv.html.twig
+++ b/templates/cvForm/cv.html.twig
@@ -90,6 +90,11 @@
                         <hr/>
                         {% if status == 'ABERTO' %}
 
+                            <div class="alert alert-warning" role="alert">
+                                <h4><i class="fas fa-exclamation-circle"></i><b>Atenção!</b></h4>
+                                Após finalizar o preenchimento, não esqueça de clicar no botão "Finalizar e enviar" para submeter seu currículo à análise.
+                            </div>
+
                             <div class="form-group row" style="background-color: cornsilk; padding: 15px">
                                 <label class="col-form-label col-sm-2 required">Finalização</label>
                                 <div class="col-sm-10">
