--- a/templates/avalia.html.twig
+++ b/templates/avalia.html.twig
@@ -45,6 +45,16 @@
                         </div>
                     </div>
 
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-2 required" for="cv_updated">Status</label>
+                        <div class="col-sm-10">
+
+                            <input type="text" id="cv_updated" name="cv[updated]" disabled="disabled"
+                                   class="form-control" readonly="readonly"
+                                   value="{{ cv.status }}">
+                        </div>
+                    </div>
+
 
                     <div class="form-group row">
                         <label class="col-form-label col-sm-2 required" for="cv_cargosPretendidos">Cargos
