--- a/templates/avalia.html.twig
+++ b/templates/avalia.html.twig
@@ -76,6 +76,16 @@
                                    readonly="readonly" value="{{ cv.cpf }}" maxlength="14">
                         </div>
                     </div>
+
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-2 required" for="cv_sexo">Sexo</label>
+                        <div class="col-sm-10">
+                            <input type="text" id="cv_sexo" name="cv[sexo]" disabled="disabled"
+                                   class="form-control"
+                                   readonly="readonly" value="{{ cv.sexo }}" maxlength="14">
+                        </div>
+                    </div>
+
                     <div class="form-group row">
                         <label class="col-form-label col-sm-2 required"
                                for="cv_nome">Nome</label>
