--- a/templates/cvList.html.twig
+++ b/templates/cvList.html.twig
@@ -100,6 +100,30 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <fieldset class="form-group pre-scrollable" style="height: 150px">
+                                        <legend>Status</legend>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox"
+                                                   value="MASCULINO"
+                                                    {{ ((filter is defined) and (filter.sexo is defined) and ('MASCULINO' in filter.sexo)) ? 'checked' : '' }}
+                                                   name="filter[sexo][]">
+                                            <label class="form-check-label">
+                                                MASCULINO
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox"
+                                                   value="FEMININO"
+                                                    {{ ((filter is defined) and (filter.sexo is defined) and ('FEMININO' in filter.sexo)) ? 'checked' : '' }}
+                                                   name="filter[sexo][]">
+                                            <label class="form-check-label">
+                                                FEMININO
+                                            </label>
+                                        </div>
+                                    </fieldset>
+                                </div>
+
+                                <div class="form-group">
                                     <label>Atualizado</label>
                                     <div class="row">
                                         <div class="col">
