Subindo versões do Symfony e Doctrine 2.0

--- a/templates/cvForm/alterarSenha.html.twig
+++ b/templates/cvForm/alterarSenha.html.twig
@@ -45,7 +45,7 @@
 
                         <div class="row">
                             <div class="col text-right">
-                                <button type="submit" name="btnAlterarSenha" class="btn btn-primary btn-lg" value="Salvar">
+                                <button type="submit" name="btnAlterarSenha" class="btn btn-primary" value="Salvar">
                                     <i class="fas fa-unlock-alt"></i> Alterar a senha
                                 </button>
                             </div>
