--- a/templates/cvForm/cv.html.twig
+++ b/templates/cvForm/cv.html.twig
@@ -203,7 +203,7 @@
 
                     <div class="row" style="padding-bottom: 30px">
                         <div class="col text-right">
-                            <button type="submit" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                            <button type="submit" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                     value="Salvar">
                                 <i class="fas fa-save" aria-hidden="true"></i> Salvar
                             </button>
@@ -286,7 +286,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposTelefones" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -309,7 +309,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEnderecoAtual" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -329,7 +329,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEstadoCivil" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -358,7 +358,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposFilhos" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -379,7 +379,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposFiliacao" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -399,7 +399,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposReferencias1" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -419,7 +419,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposReferencias2" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -446,7 +446,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEstudo" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -475,7 +475,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEmpregos" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -495,7 +495,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposFamiliaresCrediario" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -514,7 +514,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primary btn-lg btnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposConhecidosLoja" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
