--- a/templates/avalia.html.twig
+++ b/templates/avalia.html.twig
@@ -850,7 +850,7 @@
                                 <div class="row">
                                     <div class="col text-right">
                                         <button type="submit"
-                                                class="btn btn-primary btn-lg"
+                                                class="btn btn-primary
                                                 value="Salvar">
                                             <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                         </button>
