--- a/templates/avalia.html.twig
+++ b/templates/avalia.html.twig
@@ -13,7 +13,7 @@
 
                 <div class="col-md-12 login-sec">
                     <p class="text-center">
-                        <img src="http://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"></a>
+                        <img src="https://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"></a>
                     </p>
                     <h2 class="text-center">Currículo</h2>
 
