--- a/templates/cvForm/alterarSenha.html.twig
+++ b/templates/cvForm/alterarSenha.html.twig
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 login-sec">
-                    <p class="text-center"><img src="http://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/>
+                    <p class="text-center"><img src="https://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/>
                     </p>
                     <h2 class="text-center">Cadastro de Currículo</h2>
 
