--- a/templates/cvForm/cv.html.twig
+++ b/templates/cvForm/cv.html.twig
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-md-12 login-sec">
                     <p class="text-center"><a href="{{ url('cvForm_cv') }}"><img
-                                    src="http://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/></a>
+                                    src="https://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/></a>
                     </p>
                     <h2 class="text-center">Cadastro de Currículo</h2>
                     <div class="alert alert-primary" role="alert">
