--- a/templates/cvForm/emailConfirm.html.twig
+++ b/templates/cvForm/emailConfirm.html.twig
@@ -67,7 +67,7 @@
                             <tr>
                                 <td 
 									style="padding-top: 72px; -ms-text-size-adjust: 100%; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; color: #000000; font-family: 'Postmates Std', 'Helvetica', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px; font-smoothing: always; font-style: normal; font-weight: 600; line-height: 52px; mso-line-height-rule: exactly; text-decoration: none;">
-                                    <img src="http://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/>
+                                    <img src="https://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/>
 									<br />
 									Cadastro de Currículos
                                 </td>
