--- a/templates/cvForm/login.html.twig
+++ b/templates/cvForm/login.html.twig
@@ -12,7 +12,7 @@
         <div class="container" style="min-width: 350px; max-width: 400px;">
             <div class="row">
                 <div class="col-12 login-sec">
-                    <p class="text-center"><img src="http://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/>
+                    <p class="text-center"><img src="https://www.casabonsucesso.com.br/img/LOGO_COMPLETO_200px.jpg"/>
                     </p>
                     <h2 class="text-center">Cadastro de Currículos</h2>
 
