--- a/templates/cvForm/cv.html.twig
+++ b/templates/cvForm/cv.html.twig
@@ -534,5 +534,5 @@
 {% endblock %}
 
 {% block down_scripts %}
-    <script src="{{ asset('build/cvForm/cv.js') }}"></script>
+    {{ encore_entry_script_tags('cvForm/cv') }}
 {% endblock %}
