--- a/templates/cvList.html.twig
+++ b/templates/cvList.html.twig
@@ -209,5 +209,5 @@
 
 
 {% block down_scripts %}
-    <script src="{{ asset('build/cvList.js') }}"></script>
+    {{ encore_entry_script_tags('cvList') }}
 {% endblock %}
