--- a/templates/cvForm/checkCPF.html.twig
+++ b/templates/cvForm/checkCPF.html.twig
@@ -2,7 +2,7 @@
 
 {% block up_scripts %}
     <script src='https://www.google.com/recaptcha/api.js'></script>
-    <link rel="stylesheet" href="{{ asset('build/static/cvForm/cvForm.css') }}">
+    {{ encore_entry_css_files('cvForm/cvForm') }}
 {% endblock %}
 
 {% block page_content %}
