--- a/templates/cvForm/cv.html.twig
+++ b/templates/cvForm/cv.html.twig
@@ -201,7 +201,7 @@
 
                     <div class="row" style="padding-bottom: 30px">
                         <div class="col text-right">
-                            <button type="submit" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                            <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                     value="Salvar">
                                 <i class="fas fa-save" aria-hidden="true"></i> Salvar
                             </button>
@@ -284,7 +284,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposTelefones" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -307,7 +307,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEnderecoAtual" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -327,7 +327,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEstadoCivil" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -356,7 +356,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposFilhos" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -377,7 +377,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposFiliacao" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -397,7 +397,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposReferencias1" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -417,7 +417,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposReferencias2" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -444,7 +444,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEstudo" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -473,7 +473,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposEmpregos" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -493,7 +493,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposFamiliaresCrediario" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
@@ -512,7 +512,7 @@
                         <div class="card-footer">
                             <div class="row">
                                 <div class="col text-right">
-                                    <button type="button" class="btn btn-primarybtnSalvarAnchored CV_BTN_ACTION"
+                                    <button type="submit" class="btn btn-primary btnSalvarAnchored CV_BTN_ACTION"
                                             data-div="divCamposConhecidosLoja" value="Salvar">
                                         <i class="fas fa-save" aria-hidden="true"></i> Salvar
                                     </button>
