--- a/templates/cvForm/login.html.twig
+++ b/templates/cvForm/login.html.twig
@@ -2,7 +2,7 @@
 
 {% block up_scripts %}
     <script src='https://www.google.com/recaptcha/api.js'></script>
-
+    <link rel="stylesheet" href="{{ asset('build/static/cvForm/cvForm.css') }}">
 {% endblock %}
 
 {% block page_content %}
