--- a/templates/cvForm/cv.html.twig
+++ b/templates/cvForm/cv.html.twig
@@ -28,9 +28,9 @@
                         {% if cv.foto %}
 
                             <div class="col-sm-10">
-                                <div style="width: 120px; float: left; height: 160px; border: dashed thin grey;">
+                                <div class="text-center" style="width: 120px; float: left; height: 160px; border: dashed thin grey;">
                                     <img src="{{ getEnv('DIR_FOTOS3x4') }}{{ cv.foto }}"
-                                         style="width: 100%"/>
+                                         style="margin-right: 20px; width: 100%"/>
                                 </div>
                                 <div>
                                     {% if cv.status == 'ABERTO' %}
